// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`communication/send-sms/messente RetrieveMessageStatus should perform successfully 1`] = `
Ok {
  "value": Object {
    "deliveryStatus": "delivered",
  },
}
`;

exports[`communication/send-sms/messente SendMessage should perform successfully 1`] = `
Ok {
  "value": Object {
    "messageId": "6fee1316-60a5-4df9-a06f-c35cdb7a7ef2",
  },
}
`;
